--- a/quiz/src/components/activeQuiz/AnswersList/AnswerItem/AnswerItem.css
+++ b/quiz/src/components/activeQuiz/AnswersList/AnswerItem/AnswerItem.css
@@ -1,13 +1,14 @@
 .answer-item {
-    border: 1px solid #2FA4E7;
-    border-radius: 5px;
-    padding: 5px 10px;
-    margin-bottom: 5px;
-    cursor: pointer;
+  border: 1px solid #2fa4e7;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  background-color: #fff;
 }
 
 .answer-item:hover {
-    background-image: linear-gradient(#54b4eb, #2FA4E7 60%, #1d9ce5);
-    transition: background .3s ease-in-out;
-    color: #fff;
+  background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+  transition: background 0.3s ease-in-out;
+  color: #fff;
 }
