--- a/quiz/src/components/activeQuiz/AnswersList/AnswerItem/AnswerItem.css
+++ b/quiz/src/components/activeQuiz/AnswersList/AnswerItem/AnswerItem.css
@@ -1,14 +1,26 @@
 .answer-item {
-  border: 1px solid #2fa4e7;
+  border: 1px solid #7c9ab6;
   border-radius: 5px;
   padding: 5px 10px;
   margin-bottom: 5px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #fff;  
 }
 
 .answer-item:hover {
-  background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
-  transition: background 0.3s ease-in-out;
+  background-image: linear-gradient(#54b4eb, #2fa4e7 70%, #1d9ce5);
   color: #fff;
+  font-weight: 700;
+}
+
+.answer-item.error {
+  background-color: #e2898c;
+  color: #670f12;
+  font-weight: 700;
+}
+
+.answer-item.success {
+  background-color: #b6d298;
+  color: #3c571e;
+  font-weight: 700;
 }
