--- a/quiz/src/components/finishedQuiz/finishedQuiz.css
+++ b/quiz/src/components/finishedQuiz/finishedQuiz.css
@@ -24,3 +24,12 @@
 .success {
   color: rgb(54, 185, 54);
 }
+
+.finished-quiz button {
+  color: #fff;
+  border: 1px solid #185578;
+  background-image: linear-gradient(#54b4eb, #2fa4e7 70%, #1d9ce5);
+  border-radius: 5px;
+  font-weight: 700;
+  height: 25px;
+}
