QZ Add Button component

--- a/quiz/src/components/finishedQuiz/finishedQuiz.css
+++ b/quiz/src/components/finishedQuiz/finishedQuiz.css
@@ -24,7 +24,7 @@
 .success {
   color: rgb(54, 185, 54);
 }
-
+/* 
 .finished-quiz button {
   color: #fff;
   border: 1px solid #185578;
@@ -32,4 +32,4 @@
   border-radius: 5px;
   font-weight: 700;
   height: 25px;
-}
+} */
