--- a/quiz/src/containers/QuizList/QuizList.module.css
+++ b/quiz/src/containers/QuizList/QuizList.module.css
@@ -16,28 +16,29 @@
 }
 
 .QuizList ul li {
-  border: 1px solid #7c9ab6;
+  /* border: 1px solid #7c9ab6; */
   border-radius: 5px;
   padding: 5px 10px;
   margin-bottom: 5px;
   cursor: pointer;
-  background-color: #fff;
+  /* background-color: #fff; */
   text-decoration: none;
 }
 
 .QuizList ul li a {
   text-decoration: none;
   position: relative;
+  color: #fff;
 }
 
 .QuizList ul li:hover {
-  background-image: linear-gradient(#88c149, #73a839 60%, #699934);
+  /* background-image: linear-gradient(#88c149, #73a839 60%, #699934); */
   color: #fff;
   font-weight: 700;
 }
 
 .QuizList h1 {
-  color: #73a839;
+  color: #54b4eb;
   margin-left: 10px;
 }
 
