--- a/quiz/src/components/UI/button/button.module.css
+++ b/quiz/src/components/UI/button/button.module.css
@@ -11,25 +11,30 @@
   outline: none;
 }
 
-.button.primary {
+.button:active {
+  opacity: 0.65;
+}
+
+.button:disabled {
+  color: #495057;
+  background-image: linear-gradient(#ffff, #ffff 70%, #ffff);
+  border-color: #495057;
+  cursor: not-allowed;
+}
+
+.primary {
   border: 1px solid #2fa4e7;
   background-image: linear-gradient(#54b4eb, #2fa4e7 70%, #1d9ce5);
 }
 
-.button.error {
+.error {
   border: 1px solid #c71c22;
   background-image: linear-gradient(#e12b31, #c71c22 60%, #b5191f);
 }
 
-.button.success {
+.success {
   border: 1px solid #73a839;
   background-image: linear-gradient(#88c149, #73a839 60%, #699934);
-}
-
-.button.disabled {
-  color: #212529;
-  background-color: #e9ecef;
-  border-color: #e9ecef;
 }
 
 .button:hover {
