--- a/fish-store/src/css/_animations.styl
+++ b/fish-store/src/css/_animations.styl
@@ -6,11 +6,13 @@
 */
 
 .order-enter
+  background-color: tomato
   transform: translateX(-120%)
-  transition 0.5s
+  transition 5s
   max-height: 0
   padding 0 !important
   &.order-enter-active
+    background-color: darkcyan
     max-height 60px
     transform: translateX(0)
     padding 2rem 0 !important
