SW Code Refstructured

--- a/star-wars-database-api/src/components/item-details/item-details.css
+++ b/star-wars-database-api/src/components/item-details/item-details.css
@@ -12,13 +12,13 @@
 }
 
 .item-details .list-group-item {
-  padding: 0.25rem;
+  padding: .25rem;
 }
 
-.item-details .list-group-item .term {
-  margin-right: 0.5rem;
+.item-details .list-group-item .term{
+  margin-right: .5rem;
 }
 
-.btn{
-  margin-top: auto;
+.item-details button {
+  margin-top: 5px;
 }
