--- a/star-wars-database-api/src/components/random-planet/random-planet.css
+++ b/star-wars-database-api/src/components/random-planet/random-planet.css
@@ -2,6 +2,7 @@
   display: flex;
   padding: 1rem;
   border: 1px solid #444;
+  margin-bottom: 1rem;
 }
 
 .random-planet .planet-image {
@@ -16,9 +17,9 @@
 }
 
 .random-planet .list-group-item {
-  padding: 0.25rem;
+  padding: .25rem;
 }
 
 .random-planet .list-group-item .term {
-  margin-right: 0.5rem;
+  margin-right: .5rem;
 }
